<resources>
    <string name="app_name">HappeningViewer</string>
    <string name="title_activity_main">Find Events</string>
    <string name="filter_label_from_date">From Date:</string>
    <string name="filter_label_to_date">To Date:</string>
    <string name="filter_label_category">Category:</string>
    <string name="filter_label_artist">Artist:</string>
    <string name="filter_label_region">Region:</string>
    <string name="filter_label_country">Country:</string>
    <string name="button_search">Search</string>
    <string name="title_activity_list">Results</string>
    <string name="event_item_label_location">Location:</string>
    <string name="title_activity_details">Event Details</string>
    <string name="button_open_maps">Open in Android Maps</string>
</resources>
